# reflex-servant-template

./: .gitignore  cabal.project  default.nix  makefile  reflex-platform.nix  servant-reflex.nix
backend/: backend.cabal
backend/app/: Main.hs
backend/src/: Backend.hs
common/: LICENSE  common.cabal
common/src/: Common.hs
frontend/: frontend.cabal
frontend/app/: Main.hs
frontend/src/: Frontend.hs
static/: style.css
