cabal-version:       >=1.10

name:                frontend
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Igor Belousov
maintainer:          lipranu@gmail.com
copyright:           2020 Igor Belousov
build-type:          Simple

library
  exposed-modules:     Frontend
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13
                     , common

executable frontend
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13
                     , frontend

test-suite frontend-test
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13
